# hf-chat-template

./: .gitattributes  .gitignore  COMPATIBILITY.md  Cargo.toml  LICENSE-MIT  README.md  SPEC.md  deny.toml
.github/workflows/: ci.yml
src/: clock.rs  config.rs  engine.rs  error.rs  hub.rs  json.rs  lib.rs  model.rs  template.rs
tests/: hub.rs  m0_spikes.rs  m1_core.rs  m2_model.rs  m3_corpus.rs  panic_safety.rs  tokenizers.rs
tests/corpus/: README.md
tests/corpus/command-r-v01/: meta.json  tokenizer_config.json
tests/corpus/command-r-v01/cases/: rag.json  tool_use.json
tests/corpus/command-r-v01/expected/: basic.txt  no_system.txt  rag.txt  single_user.txt  tool_use.txt
tests/corpus/deepseek-llm-7b-chat/: meta.json  tokenizer_config.json
tests/corpus/deepseek-llm-7b-chat/cases/: no_system.json
tests/corpus/deepseek-llm-7b-chat/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/deepseek-r1-distill-qwen-7b/: meta.json  tokenizer_config.json
tests/corpus/deepseek-r1-distill-qwen-7b/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/falcon-7b-instruct/: meta.json  tokenizer_config.json
tests/corpus/falcon-7b-instruct/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/gemma-2-9b-it/: meta.json  tokenizer_config.json
tests/corpus/gemma-2-9b-it/cases/: multi_turn.json
tests/corpus/gemma-2-9b-it/expected/: multi_turn.txt  no_system.txt
tests/corpus/gemma-3-4b-it/: meta.json  tokenizer_config.json
tests/corpus/gemma-3-4b-it/expected/: basic.txt  single_user.txt
tests/corpus/granite-3.1-8b-instruct/: meta.json  tokenizer_config.json
tests/corpus/granite-3.1-8b-instruct/cases/: with_system.json
tests/corpus/granite-3.1-8b-instruct/expected/: dated_multi.txt  dated_single_user.txt  with_system.txt
tests/corpus/hermes-3-llama-3.1-8b/: meta.json  tokenizer_config.json
tests/corpus/hermes-3-llama-3.1-8b/cases/: no_system.json  single_user.json  tool_use.json
tests/corpus/hermes-3-llama-3.1-8b/expected/: basic.txt  no_system.txt  single_user.txt  tool_use.txt
tests/corpus/lfm2-1.2b/: meta.json  tokenizer_config.json
tests/corpus/lfm2-1.2b/cases/: basic.json  no_system.json  single_user.json  with_tools.json
tests/corpus/lfm2-1.2b/expected/: basic.txt  no_system.txt  single_user.txt  with_tools.txt
tests/corpus/llama-3.1-8b-instruct/: meta.json  tokenizer_config.json
tests/corpus/llama-3.1-8b-instruct/cases/: basic.json  no_system.json  single_user.json  tools_weather.json
tests/corpus/llama-3.1-8b-instruct/expected/: basic.txt  no_system.txt  single_user.txt  tools_weather.txt
tests/corpus/mistral-7b-instruct-v0.3/: meta.json  tokenizer_config.json
tests/corpus/mistral-7b-instruct-v0.3/cases/: tools_weather.json
tests/corpus/mistral-7b-instruct-v0.3/expected/: basic.txt  no_system.txt  single_user.txt  tools_weather.txt
tests/corpus/openchat-3.5-0106/: meta.json  tokenizer_config.json
tests/corpus/openchat-3.5-0106/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/phi-3-mini-4k-instruct/: meta.json  tokenizer_config.json
tests/corpus/phi-3-mini-4k-instruct/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/qwen2.5-0.5b-instruct/: meta.json  tokenizer_config.json
tests/corpus/qwen2.5-0.5b-instruct/cases/: tools_weather.json
tests/corpus/qwen2.5-0.5b-instruct/expected/: no_system.txt  single_user.txt  tools_weather.txt
tests/corpus/qwen3-0.6b/: meta.json  tokenizer_config.json
tests/corpus/qwen3-0.6b/expected/: basic.txt  no_system.txt  single_user.txt  tools_weather.txt
tests/corpus/qwq-32b/: meta.json  tokenizer_config.json
tests/corpus/qwq-32b/cases/: single_user.json
tests/corpus/qwq-32b/expected/: basic.txt  no_system.txt  single_user.txt  tools_weather.txt
tests/corpus/smollm2-1.7b-instruct/: meta.json  tokenizer_config.json
tests/corpus/smollm2-1.7b-instruct/cases/: basic.json
tests/corpus/smollm2-1.7b-instruct/expected/: no_system.txt  single_user.txt
tests/corpus/smollm3-3b/: meta.json
tests/corpus/smollm3-3b/cases/: override_no_gen_prompt.json  override_with_assistant.json
tests/corpus/smollm3-3b/expected/: override_no_gen_prompt.txt  override_with_assistant.txt
tests/corpus/yi-1.5-9b-chat/: meta.json  tokenizer_config.json
tests/corpus/yi-1.5-9b-chat/expected/: basic.txt  no_system.txt  single_user.txt
tests/corpus/zephyr-7b-beta/: meta.json  tokenizer_config.json
tests/corpus/zephyr-7b-beta/expected/: basic.txt  no_system.txt  single_user.txt
tests/fixtures/: tiny_tokenizer.json
tools/: gen_reference.py
