[package]
name = "hf-chat-template"
version = "0.0.0"
edition = "2021"
description = "Render Hugging Face chat_template (Jinja2) strings correctly — the transformers-compatible prompt-building layer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GregoryBolshakov/hf-chat-template"
keywords = ["llm", "jinja", "chat-template", "huggingface", "tokenizer"]
categories = ["text-processing", "template-engine"]

[dependencies]
minijinja = { version = "2.20", features = ["json", "loop_controls", "preserve_order"] }
minijinja-contrib = { version = "2.20", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: the typed render path builds a serde_json::Value context; without this,
# object keys sort alphabetically and tool-call prompts diverge from the transformers reference.
serde_json = { version = "1.0.150", features = ["preserve_order"] }

[dev-dependencies]
serde_json = { version = "1.0.150", features = ["preserve_order"] }
